--- a/APS/index3.html
+++ b/APS/index3.html
@@ -15,22 +15,17 @@
         </ul>
     </nav>
     <h1>Formulários</h1>
-    <form action="" method="post">
-        <div>
-          <label for="name">Nome:</label>
-          <input type="text" id="name" />
-        </div>
-        <div>
-          <label for="mail">E-mail:</label>
-          <input type="email" id="mail" />
-        </div>
-        <div>
-          <label for="msg">Mensagem:</label>
-          <textarea id="msg"></textarea>
-        </div>
-        <div class="button">
-          <button type="submit">Enviar sua mensagem</button>
-        </div>
-      </form>
+    <form action="" method="get">
+        <label for="name">Nome:</label>
+        <input name="nome" type="text" id="name" />
+
+        <label for="mail">E-mail:</label>
+        <input type="email" id="mail" />
+
+        <label for="msg">Mensagem:</label>
+        <textarea id="msg"></textarea>
+
+        <button type="submit">Enviar sua mensagem</button>
+    </form>
 </body>
 </html>
